[package]
name = "cookie_clicker"
version = "0.1.0"
edition = "2021"
description = "A Cookie Clicker-style CLI game with gambling minigames for Arch Linux"
license = "MIT"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["small_rng"] }
